--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <header class="navbar">
    <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span>
 </div>
     <nav class="nav-links">
@@ -38,32 +38,32 @@
     <section class="featured" id="featured">
     <h2>Featured Products </h2>
     <div class="product-grid">
-      <div class="product" data-id="1" data-name="Red Sneakers" data-price="5000" data-image="image/90AIR.jpg">
-  <img src="image/90AIR.jpg" alt="Airmax">
+      <div class="product" data-id="1" data-name="Red Sneakers" data-price="5000" data-image="90AIR.jpg">
+  <img src="90AIR.jpg" alt="Airmax">
   <h3>Airmax</h3>
   <p> ₱5,000.00</p>
   <button class="add-to-cart-btn">Add to Cart</button>
 </div>
-      <div class="product" data-id="1" data-name="Adidas Ultraboost 22" data-price="4200"data-image="image/AdidasUltraboost 22.jpg">
-        <img src="image/AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22" />
+      <div class="product" data-id="1" data-name="Adidas Ultraboost 22" data-price="4200"data-image="AdidasUltraboost 22.jpg">
+        <img src="AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22" />
         <h3>Adidas - Ultraboost</h3>
         <p> ₱4,200.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name="Chuck Taylor All Star" data-price="3500"data-image="image/ChuckTaylorAll Star.jpg">
-        <img src="image/ChuckTaylorAll Star.jpg" alt="Chuck Taylor All Star" />
+      <div class="product" data-id="1" data-name="Chuck Taylor All Star" data-price="3500"data-image="ChuckTaylorAll Star.jpg">
+        <img src="ChuckTaylorAll Star.jpg" alt="Chuck Taylor All Star" />
         <h3>Converse -Taylor</h3>
         <p> ₱3,500.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name="Puma Suede Classic" data-price="4000"data-image="image/PumaSuedClassic.jpg">
-        <img src="image/PumaSuedClassic.jpg" alt="Puma Suede Classic" />
+      <div class="product" data-id="1" data-name="Puma Suede Classic" data-price="4000"data-image="PumaSuedClassic.jpg">
+        <img src="PumaSuedClassic.jpg" alt="Puma Suede Classic" />
         <h3>Puma - Suede Classic</h3>
         <p> ₱4,000.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name="New Balance 574 Core" data-price="6795"data-image="image/NewBalance574core.jpg">
-        <img src="image/NewBalance574core.jpg" alt="New Balance 574 Core" />
+      <div class="product" data-id="1" data-name="New Balance 574 Core" data-price="6795"data-image="NewBalance574core.jpg">
+        <img src="NewBalance574core.jpg" alt="New Balance 574 Core" />
         <h3>New Balance 574</h3>
         <p> ₱6,795.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
