--- a/explore.html
+++ b/explore.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Navbar -->
   <header class="navbar"> <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
    
@@ -35,22 +35,22 @@
     <h2>Explore Our Collections</h2>
     <div class="explore-categories">
       <div class="category-card">
-        <img src="image/streetwear.jpg" alt="Streetwear" />
+        <img src="streetwear.jpg" alt="Streetwear" />
         <h3>Streetwear</h3>
         <p>Urban kicks for bold, everyday fashion.</p>
       </div>
       <div class="category-card">
-        <img src="image/running.jpg" alt="Running Shoes" />
+        <img src="running.jpg" alt="Running Shoes" />
         <h3>Running</h3>
         <p>Built for speed, support, and endurance.</p>
       </div>
       <div class="category-card">
-        <img src="image/lifestyle.jpg" alt="Lifestyle Sneakers" />
+        <img src="lifestyle.jpg" alt="Lifestyle Sneakers" />
         <h3>Lifestyle</h3>
         <p>Comfort meets cool — all-day, every day.</p>
       </div>
       <div class="category-card">
-        <img src="image/limited.jpg" alt="Limited Edition" />
+        <img src="limited.jpg" alt="Limited Edition" />
         <h3>Limited Editions</h3>
         <p>Rare drops you won’t want to miss.</p>
       </div>
