--- a/converse.html
+++ b/converse.html
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <header class="navbar">
    <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -38,36 +38,36 @@
   <section class="featured" id="featured">
     <h2>Explore Converse Sneakers</h2>
     <div class="product-grid">
-      <div class="product" data-id="3" data-name="Chuck Taylor All Star" data-price="3300" data-image="image/CHUCKTAYLOR.jpg">
-        <img src="image/CHUCKTAYLOR.jpg" alt="Chuck Taylor All Star">
+      <div class="product" data-id="3" data-name="Chuck Taylor All Star" data-price="3300" data-image="CHUCKTAYLOR.jpg">
+        <img src="CHUCKTAYLOR.jpg" alt="Chuck Taylor All Star">
         <h3>Chuck Taylor All Star</h3>
         <p>₱3,300.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="3" data-name="Chuck 70 High Top" data-price="3900" data-image="image/CHUCK70.jpg">
-        <img src="image/CHUCK70.jpg" alt="Chuck 70 High Top">
+      <div class="product" data-id="3" data-name="Chuck 70 High Top" data-price="3900" data-image="CHUCK70.jpg">
+        <img src="CHUCK70.jpg" alt="Chuck 70 High Top">
         <h3>Chuck 70 High Top</h3>
         <p>₱3,900.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="3" data-name="Converse Run Star Hike" data-price="6200" data-image="image/RUNSTARHIKE.jpg">
-        <img src="image/RUNSTARHIKE.jpg" alt="Run Star Hike">
+      <div class="product" data-id="3" data-name="Converse Run Star Hike" data-price="6200" data-image="RUNSTARHIKE.jpg">
+        <img src="RUNSTARHIKE.jpg" alt="Run Star Hike">
         <h3>Run Star Hike</h3>
         <p>₱6,200.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="3" data-name="Converse One Star" data-price="3700" data-image="image/ONESTAR.jpg">
-        <img src="image/ONESTAR.jpg" alt="One Star">
+      <div class="product" data-id="3" data-name="Converse One Star" data-price="3700" data-image="ONESTAR.jpg">
+        <img src="ONESTAR.jpg" alt="One Star">
         <h3>Converse One Star</h3>
         <p>₱3,700.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="3" data-name="Chuck Taylor Lift Platform" data-price="4100" data-image="image/LIFT.jpg">
-        <img src="image/LIFT.jpg" alt="Chuck Taylor Lift">
+      <div class="product" data-id="3" data-name="Chuck Taylor Lift Platform" data-price="4100" data-image="LIFT.jpg">
+        <img src="LIFT.jpg" alt="Chuck Taylor Lift">
         <h3>Chuck Taylor Lift</h3>
         <p>₱4,100.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
