--- a/collection.html
+++ b/collection.html
@@ -10,7 +10,7 @@
 
   <header class="navbar">
    <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -27,22 +27,22 @@
     
     <div class="explore-categories">
       <div class="category-card">
-        <img src="image/Streetwear.jpg" alt="Trending Sneakers">
+        <img src="Streetwear.jpg" alt="Trending Sneakers">
         <h3>Trending</h3>
         <p>Stay ahead of the style curve with kicks that are taking over the streets.</p>
       </div>
       <div class="category-card">
-        <img src="image/lifestyle.jpg" alt="Performance Sneakers">
+        <img src="lifestyle.jpg" alt="Performance Sneakers">
         <h3>Performance</h3>
         <p>Built for athletes. Designed for winners. Explore performance-enhancing sneakers.</p>
       </div>
       <div class="category-card">
-        <img src="image/PumaSuedClassic.jpg" alt="Classic Sneakers">
+        <img src="PumaSuedClassic.jpg" alt="Classic Sneakers">
         <h3>Classics</h3>
         <p>Timeless designs that never go out of style. Relive the legends of footwear.</p>
       </div>
       <div class="category-card">
-        <img src="image/limited.jpg" alt="Limited Editions">
+        <img src="limited.jpg" alt="Limited Editions">
         <h3>Limited Editions</h3>
         <p>Rare finds and exclusive releases for true collectors and sneakerheads.</p>
       </div>
