--- a/adidas.html
+++ b/adidas.html
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -38,36 +38,36 @@
   <section class="featured" id="featured">
     <h2>Explore Adidas Sneakers</h2>
     <div class="product-grid">
-      <div class="product" data-id="2" data-name="Adidas Superstar" data-price="4500" data-image="image/SUPERSTAR.jpg">
-        <img src="image/SUPERSTAR.jpg" alt="Adidas Superstar">
+      <div class="product" data-id="2" data-name="Adidas Superstar" data-price="4500" data-image="SUPERSTAR.jpg">
+        <img src="SUPERSTAR.jpg" alt="Adidas Superstar">
         <h3>Adidas Superstar</h3>
         <p>₱4,500.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="2" data-name="Adidas Stan Smith" data-price="4800" data-image="image/STANSMITH.jpg">
-        <img src="image/STANSMITH.jpg" alt="Adidas Stan Smith">
+      <div class="product" data-id="2" data-name="Adidas Stan Smith" data-price="4800" data-image="STANSMITH.jpg">
+        <img src="STANSMITH.jpg" alt="Adidas Stan Smith">
         <h3>Adidas Stan Smith</h3>
         <p>₱4,800.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="2" data-name="Adidas NMD_R1" data-price="6200" data-image="image/NMD_R1.jpg">
-        <img src="image/NMD_R1.jpg" alt="Adidas NMD_R1">
+      <div class="product" data-id="2" data-name="Adidas NMD_R1" data-price="6200" data-image="NMD_R1.jpg">
+        <img src="NMD_R1.jpg" alt="Adidas NMD_R1">
         <h3>Adidas NMD_R1</h3>
         <p>₱6,200.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="2" data-name="AdidasUltraboost22" data-price="7200" data-image="image/AdidasUltraboost 22.jpg">
-        <img src="image/AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22">
+      <div class="product" data-id="2" data-name="AdidasUltraboost22" data-price="7200" data-image="AdidasUltraboost 22.jpg">
+        <img src="AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22">
         <h3>Adidas Ultraboost 22</h3>
         <p>₱7,200.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
       </div>
 
-      <div class="product" data-id="2" data-name="Adidas Forum Low" data-price="5400" data-image="image/FORUMLOW.jpg">
-        <img src="image/FORUMLOW.jpg" alt="Adidas Forum Low">
+      <div class="product" data-id="2" data-name="Adidas Forum Low" data-price="5400" data-image="FORUMLOW.jpg">
+        <img src="FORUMLOW.jpg" alt="Adidas Forum Low">
         <h3>Adidas Forum Low</h3>
         <p>₱5,400.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
