--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <!-- Navbar -->
   <header class="navbar">
    <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -43,7 +43,7 @@
       </p>
     </div>
     <div class="about-logo-image">
-      <img src="image/LOGO2.jpg" alt="KICK Secondary Logo">
+      <img src="LOGO2.jpg" alt="KICK Secondary Logo">
     </div>
   </div>
 </section>
@@ -56,17 +56,17 @@
     <p>Behind KICK is a passionate crew dedicated to bringing you the best in sneakers and service. Get to know the faces that make your experience unforgettable.</p>
     <div class="team-grid">
       <div class="team-member">
-        <img src="image/team1.jpg" alt="Team Member 1">
+        <img src="team1.jpg" alt="Team Member 1">
         <h4>kent Bacarro</h4>
         <p>Customer Experience Lead</p>
       </div>
       <div class="team-member">
-        <img src="image/team1.jpg" alt="Team Member 2">
+        <img src="team1.jpg" alt="Team Member 2">
         <h4>Jake Banquerigo</h4>
         <p>Product Curator</p>
       </div>
       <div class="team-member">
-        <img src="image/team1.jpg" alt="Team Member 3">
+        <img src="team1.jpg" alt="Team Member 3">
         <h4>Ace Cagalawan</h4>
         <p>Logistics & Fulfillment</p>
       </div>
@@ -88,7 +88,7 @@
       <p style="margin-top: 20px;"><em>- Riel Mangubat, Founder of KICK</em></p>
     </div>
     <div class="founder-image">
-      <img src="image/myphoto.jpg" alt="Founder Riel Mangubat" />
+      <img src="myphoto.jpg" alt="Founder Riel Mangubat" />
     </div>
   </div>
 </section>
