--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <header class="navbar">
    <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -26,7 +26,7 @@
   </header>
 
   <!-- Shop Header -->
-  <section class="hero" style="background: url('image/explorebanner.jpg') no-repeat center/cover; height: 500px;">
+  <section class="hero" style="background: url('explorebanner.jpg') no-repeat center/cover; height: 500px;">
     <div class="hero-text">
       <h1>Shop All Sneakers</h1>
       <p>Step up your shoe game — explore every pair we offer.</p>
@@ -39,31 +39,31 @@
    <div class="product-grid">
   <a href="nike.html" class="product-link">
     <div class="product">
-      <img src="image/90AIR.jpg" alt="Nike Air Max 90" />
+      <img src="90AIR.jpg" alt="Nike Air Max 90" />
       <h3>Nike</h3>
     </div>
   </a>
   <a href="adidas.html" class="product-link">
     <div class="product">
-      <img src="image/AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22" />
+      <img src="AdidasUltraboost 22.jpg" alt="Adidas Ultraboost 22" />
       <h3>Adidas</h3>
     </div>
   </a>
   <a href="converse.html" class="product-link">
     <div class="product">
-      <img src="image/ChuckTaylorAll Star.jpg" alt="Chuck Taylor All Star" />
+      <img src="ChuckTaylorAll Star.jpg" alt="Chuck Taylor All Star" />
       <h3>Converse All Star</h3>
     </div>
   </a>
   <a href="puma.html" class="product-link">
     <div class="product">
-      <img src="image/PumaSuedClassic.jpg" alt="Puma Suede Classic" />
+      <img src="PumaSuedClassic.jpg" alt="Puma Suede Classic" />
       <h3>Puma</h3>
     </div>
   </a>
   <a href="newbalance.html" class="product-link">
     <div class="product">
-      <img src="image/NewBalance574core.jpg" alt="New Balance 574 Core" />
+      <img src="NewBalance574core.jpg" alt="New Balance 574 Core" />
       <h3>New Balance</h3>
     </div>
   </a>
