--- a/puma.html
+++ b/puma.html
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo logo-overlay">
-  <img src="image/LOGO.png" alt="KICK Logo" />
+  <img src="LOGO.png" alt="KICK Logo" />
   <span>KICK</span> 
 </div>
     <nav class="nav-links">
@@ -26,7 +26,7 @@
   </header>
 
   <!-- Hero Banner -->
-  <section class="hero" style="background: url('image/nikebanner.jpg') no-repeat center/cover; height: 400px;">
+  <section class="hero" style="background: url('nikebanner.jpg') no-repeat center/cover; height: 400px;">
     <div class="hero-text">
       <h1>Puma Collection</h1>
       <p>Discover the best of Puma sneakers.</p>
@@ -37,32 +37,32 @@
  <section class="featured" id="featured">
     <h2>Explore Puma neakers</h2>
     <div class="product-grid">
-      <div class="product" data-id="1" data-name="Red Sneakers" data-price="5000" data-image="image/90AIR.jpg">
-  <img src="image/90AIR.jpg" alt="Airmax">
+      <div class="product" data-id="1" data-name="Red Sneakers" data-price="5000" data-image="90AIR.jpg">
+  <img src="90AIR.jpg" alt="Airmax">
   <h3>Airmax</h3>
   <p> ₱5,000.00</p>
   <button class="add-to-cart-btn">Add to Cart</button>
 </div>
-      <div class="product" data-id="1" data-name="Nike Cortez" data-price="4200"data-image="image/CORTEZ.jpg">
-        <img src="image/CORTEZ.jpg" alt="Nike Cortez" />
+      <div class="product" data-id="1" data-name="Nike Cortez" data-price="4200"data-image="CORTEZ.jpg">
+        <img src="CORTEZ.jpg" alt="Nike Cortez" />
         <h3>Nike Cortez</h3>
         <p> ₱4,200.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name=">Nike Air Force 1" data-price="3500"data-image="image/FORCE.jpg">
-        <img src="image/FORCE.jpg" alt=">Nike Air Force 1" />
+      <div class="product" data-id="1" data-name=">Nike Air Force 1" data-price="3500"data-image="FORCE.jpg">
+        <img src="FORCE.jpg" alt=">Nike Air Force 1" />
         <h3>Nike Air Force 1</h3>
         <p> ₱3,500.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name="Nike Blazer Mid '77" data-price="4000"data-image="image/BLAZER.jpg">
-        <img src="image/BLAZER.jpg" alt="Nike Blazer Mid '77" />
+      <div class="product" data-id="1" data-name="Nike Blazer Mid '77" data-price="4000"data-image="BLAZER.jpg">
+        <img src="BLAZER.jpg" alt="Nike Blazer Mid '77" />
         <h3>Nike Blazer Mid 77</h3>
         <p> ₱4,000.00</p>
          <button class="add-to-cart-btn">Add to Cart</button>
       </div>
-      <div class="product" data-id="1" data-name=">Nike Air Jordan 4" data-price="6795"data-image="image/JORDAN.jpg">
-        <img src="image/JORDAN.jpg" alt="Air Jordan 4" />
+      <div class="product" data-id="1" data-name=">Nike Air Jordan 4" data-price="6795"data-image="JORDAN.jpg">
+        <img src="JORDAN.jpg" alt="Air Jordan 4" />
         <h3>Nike Air Jordan 4</h3>
         <p> ₱6,795.00</p>
         <button class="add-to-cart-btn">Add to Cart</button>
